# callblocker

./: .clang-format  .gitignore  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  debian.yml  frontend.yml  raspbian.yml  test.yml  ubuntu.yml
debian/: callblockerd.service  changelog  control  dirs  rules
doc/: development.md
docs/: development.md  troubleshooting.md
etc/: Makefile.am
etc/callblocker/: Makefile.am  README.md  meson.build  settings.json  tpl_settings.json
etc/callblocker/allowlists/: README.md  main.json
etc/callblocker/blacklists/: Makefile.am  README.md  template.json
etc/callblocker/blocklists/: README.md
etc/callblocker/cache/: Makefile.am  README.md  onlinecheck.json  onlinelookup.json
etc/callblocker/whitelists/: Makefile.am  README.md  template.json
etc/systemd/system/: Makefile.am  callblockerd.service  meson.build
scripts/: CH_blacklist_K-Tipp.py  Makefile.am  blacklist_CH_K-Tipp.py  blacklist_US_toastedspam_com.py  onlinecheck_phonespamfilter_com.py  onlinecheck_tellows.de.py  onlinecheck_tellows_de.py  onlinecheck_whocalled_us.py  spamcheck_phonespamfilter_com.py  spamcheck_tellows.de.py
src/: .gitignore  AnalogPhone.cpp  AnalogPhone.h  Block.cpp  Block.h  FileList.cpp  FileList.h  FileLists.cpp  FileLists.h  FileListsCache.cpp  FileListsCache.h  FileListsCached.cpp  FileListsCached.h  FileListsNotified.cpp  FileListsNotified.h  Helper.cpp  Helper.h  List.cpp  List.h  Lists.cpp  Lists.h  Logger.cpp  Logger.h  Main.cpp  Makefile.am  Modem.cpp  Modem.h  Notify.cpp  Notify.h  Phone.cpp  Phone.h  Settings.cpp  Settings.h  SipAccount.cpp  SipAccount.h  SipPhone.cpp  SipPhone.h  TimerUtil.cpp  TimerUtil.h  Utils.cpp  (+2 more)
src-web/: index.html  meson.build  package-lock.json  package.json  webpack.config.js
src-web/src/: app.css  loaderConfig.js
src/callblockerd/: List.h  Lists.cpp  Logger.cpp  Main.cpp  Makefile.am  Phone.h  Settings.cpp  SipAccount.cpp  SipAccount.h  SipPhone.cpp  SipPhone.h
src/scripts/: CH_blacklist_K-Tipp.py
test/: Makefile.am
test/callblockerd/: Main.cpp  Makefile.am  Test.h  Test_Block.cpp  Test_FileListsCache.cpp  Test_FileListsNotified.cpp  Test_Utils.cpp  meson.build
test/callblockerd/data/etc/blacklists/: main.json
test/callblockerd/data/etc/cache/: onlinecheck.json
test/callblockerd/data/etc/whitelists/: main.json
test/python/: onlinelookup_tests.sh
tests/callblockerd/: Main.cpp  Test.h  Test_Block.cpp  Test_FileListsCache.cpp  Test_FileListsNotified.cpp  Test_Utils.cpp
tests/callblockerd/data/etc/: settings.json
tests/callblockerd/data/etc/allowlists/: main.json
tests/callblockerd/data/etc/blacklists/: main.json
tests/callblockerd/data/etc/blocklists/: main.json
tests/callblockerd/data/etc/cache/: onlinelookup.json
tests/callblockerd/data/etc/whitelists/: main.json
tests/python/: onlinelookup_tests.sh
usr/: Makefile.am
usr/share/: meson.build
usr/share/callblocker/: Makefile.am  blacklist_CH_K-Tipp.py  blacklist_US_toastedspam_com.py  blacklist_base.py  blacklist_ktipp_ch.py  blacklist_toastedspam_com.py  blocklist_base.py  blocklist_ktipp_ch.py  blocklist_toastedspam_com.py  convert_LDIF.py  import_CSV.py  import_LDIF.py  import_VCARD.py  import_VCF.py  import_base.py  online_base.py  onlinecheck_nomorobo_com.py  onlinecheck_phonespamfilter_com.py  onlinecheck_shouldianswer_com.py  onlinecheck_tellows_de.py  onlinecheck_whocalled_us.py  onlinecheck_youmail_com.py  onlinelookup_118218_fr.py  onlinelookup_all.py  onlinelookup_dasoertliche_de.py  onlinelookup_dasschnelle_at.py  onlinelookup_local_ch.py  onlinelookup_pagesjaunes_fr.py  onlinelookup_paginebianche_it.py  onlinelookup_tel_search_ch.py  whitelist_CSV.py  whitelist_LDIF.py
usr/var/www/: meson.build
usr/var/www/callblocker/: Makefile.am  app.css  callerlog.php  config.php  index.html  journal.php  list.php  lists.php  online_credentials.php  package-lock.json  package.json  phones.php  settings.php  webpack.config.js
usr/var/www/callblocker/js/: Makefile.am  app.js  bootstrap.js  loaderConfig.js  package-lock.json  package.json
usr/var/www/callblocker/public/: index.html
usr/var/www/callblocker/python-fcgi/: Makefile.am  api.py  app.py  app_lighttpd.py  config.py  journal.py  logs.py  settings.py  test_journal.py
usr/var/www/callblocker/src/: app.css  app.js  bootstrap.js  loaderConfig.js
var/www/callblocker/: Makefile.am  callerlog.php  index.html  journal.php  list.php
var/www/callblocker/js/: Makefile.am  app.js
web/: meson.build  package-lock.json  package.json  prepare.sh  webpack.config.js
web/src/: app.css  app.js  bootstrap.js  loaderConfig.js
