# Process this file with automake to produce Makefile.in.
# Makefile.am for callblocker/scripts.
#
# Copyright 1996, 1997, 2001, 2005, 2006, 2007, 2008 Free Software
# Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

callblockerdir=$(datadir)/callblocker
callblocker_DATA = \
  CH_blacklist_K-Tipp.py \
  onlinecheck_tellows_de.py \
  onlinecheck_phonespamfilter_com.py
